depuración de img

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+        <div class="services-title">
           <h2>Services</h2>
           <p>Check our Services</p>
         </div>
@@ -398,7 +398,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
                 <strong>Phone:</strong> +1 5589 55488 55<br>
                 <strong>Email:</strong> info@example.com<br>
               </p>
-              <div class="social-links mt-3">
+              <!--<div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -452,7 +452,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/GL-free-multipurpose-html-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://google.com/">KATARSYS</a>
       </div>
     </div>
   </footer><!-- End Footer -->
