--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
     <section id="experiences" class="experiences">
       <div class="container" data-aos="fade-up">
       <div class="section-title">
-          <h2>Professional And experiencesd Escrow Services</h2>
+          <h2>Professional and Escrow Services</h2>
           <p>Why Choose Our Firm</p>
         </div>
 
