--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Globalink</title>
+  <title>Atlantic Escrow</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">GL<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">AE<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--<a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/Katarsis.png" alt="" class="img-fluid"></a>-->
 
@@ -62,7 +62,7 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Globalink<span>.</span></h1>
+          <h1>Atlantic Escrow<span>.</span></h1>
           <h2>We hold funds on behalf of two or more entities, to be released in accordance with the Escrow Agreement.</h2>
         </div>
       </div>
@@ -82,7 +82,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About Us</h3>
             <p class="fst-italic">
-              Globalink is one of the leading providers of Escrow Services in the United States for international transactions. We provide a familiar process that allows our clients to settle transactions with flexibility and security. Being a company supported by the laws of the United States regarding the performance and provision of escrow services.
+              Atlantic Escrow is one of the leading providers of Escrow Services in the United States for international transactions. We provide a familiar process that allows our clients to settle transactions with flexibility and security. Being a company supported by the laws of the United States regarding the performance and provision of escrow services.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Qualified Escrow Service
@@ -114,7 +114,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
             <div class="icon-box">
               <div class="icon"><i class="bi bi-bank2"></i></div>
               <h4><a href="">General Counsel Services</a></h4>
-              <p>You will have the comfort of knowing that the contracts your business intends to enter into properly reflect the deal you have agreed to. Globalink will also use their extensive negotiation experiences on behalf of its clients.</p>
+              <p>You will have the comfort of knowing that the contracts your business intends to enter into properly reflect the deal you have agreed to. Atlantic Escrow will also use their extensive negotiation experiences on behalf of its clients.</p>
             </div>
           </div>
 
@@ -130,7 +130,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
             <div class="icon-box">
               <div class="icon"><i class="bi bi-globe"></i></div>
               <h4><a href="">International Mergers and Acquisition</a></h4>
-              <p>International mergers and acquisitions play an important role behind the growth of a Globalink. These deals or transactions help a large number of clients penetrate into new markets fast and attain economies of scale.</p>
+              <p>International mergers and acquisitions play an important role behind the growth of a Atlantic Escrow. These deals or transactions help a large number of clients penetrate into new markets fast and attain economies of scale.</p>
             </div>
           </div>
 
@@ -138,7 +138,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
             <div class="icon-box">
               <div class="icon"><i class="bi bi-wallet-fill"></i></div>
               <h4><a href="">Breach of Contract and Breach of Fiduciary Duty Defense</a></h4>
-              <p>Globalink has a lot experiencesd team with preliminary negotiations when forming a partnership and continues until the partnership is dissolved and all partnership affairs completely settled.</p>
+              <p>Atlantic Escrow has a lot experiencesd team with preliminary negotiations when forming a partnership and continues until the partnership is dissolved and all partnership affairs completely settled.</p>
             </div>
           </div>
 
@@ -146,7 +146,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
               <h4><a href="">Corporate Formation</a></h4>
-              <p>Globalink has a worldwide network of experts uses an in-depth knowledge of experiencesry-specific business laws and regulations to help you finish your deals without delays.</p>
+              <p>Atlantic Escrow has a worldwide network of experts uses an in-depth knowledge of experiencesry-specific business laws and regulations to help you finish your deals without delays.</p>
             </div>
           </div>
 
@@ -154,7 +154,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
             <div class="icon-box">
               <div class="icon"><i class="bi bi-gem"></i></div>
               <h4><a href="">Stockholder Services</a></h4>
-              <p>Globalink has a Stockholder Services agents, who are responsible for investor record-keeping, communications, and some other administrative responsibilities in the international market.</p>
+              <p>Atlantic Escrow has a Stockholder Services agents, who are responsible for investor record-keeping, communications, and some other administrative responsibilities in the international market.</p>
             </div>
           </div>
 
@@ -162,7 +162,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
               <h4><a href="">Property Settlements</a></h4>
-              <p>Globalink has a legal process that is facilitated by your legal and financial representatives and those of the seller. It’s when ownership passes from the seller to you, and you pay the balance of the sale price. The seller sets the settlement date in the contract of sale.</p>
+              <p>Atlantic Escrow has a legal process that is facilitated by your legal and financial representatives and those of the seller. It’s when ownership passes from the seller to you, and you pay the balance of the sale price. The seller sets the settlement date in the contract of sale.</p>
             </div>
           </div>
 
@@ -391,7 +391,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>GL<span>.</span></h3>
+              <h3>AE<span>.</span></h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
@@ -445,13 +445,13 @@ Our experiencesd team of residential and commercial title professionals ensure a
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>GL</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>AE</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/GL-free-multipurpose-html-bootstrap-template/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/AE-free-multipurpose-html-bootstrap-template/ -->
         Designed by <a href="https://google.com/">KATARSYS</a>
       </div>
     </div>
