--- a/inner-page.html
+++ b/inner-page.html
@@ -29,8 +29,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: GL - v4.3.0
-  * Template URL: https://bootstrapmade.com/GL-free-multipurpose-html-bootstrap-template/
+  * Template Name: AE - v4.3.0
+  * Template URL: https://bootstrapmade.com/AE-free-multipurpose-html-bootstrap-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">GL<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">AE<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -115,7 +115,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>GL<span>.</span></h3>
+              <h3>AE<span>.</span></h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
@@ -169,13 +169,13 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>GL</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>AE</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/GL-free-multipurpose-html-bootstrap-template/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/AE-free-multipurpose-html-bootstrap-template/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
