--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ Our experiencesd team of residential and commercial title professionals ensure a
           <p>Why Choose Our Firm</p>
         </div>
 
-        <div class="row no-gutters">
-          <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right" data-aos-delay="100"></div>
+        <div class="container-fluid">
+          
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
             <div class="content d-flex flex-column justify-content-center">
               <h3>Why Choose Our Firm</h3>
@@ -191,39 +191,37 @@ Our experiencesd team of residential and commercial title professionals ensure a
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="experiences-box">
                     <i class="bi bi-emoji-smile"></i>
-                    <span data-pureexperienceser-start="0" data-pureexperienceser-end="65" data-pureexperienceser-duration="2" class="pureexperienceser"></span>
-                    <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                    <span data-pureexperienceses-start="0" data-pureexperienceses-end="100" data-pureexperienceses-duration="2" class="pureexperienceses"></span>
+                    <p><strong>Risk reduction strategy</strong> Risk reduction is top of mind in any global transaction. That’s why so many companies turn to Irish Holdings for Escrow Services. Our global team of experts will help you develop an escrow transaction structure that will work for you.</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="experiences-box">
                     <i class="bi bi-journal-richtext"></i>
-                    <span data-pureexperienceser-start="0" data-pureexperienceser-end="85" data-pureexperienceser-duration="2" class="pureexperienceser"></span>
-                    <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                    <span data-pureexperienceses-start="0" data-pureexperienceses-end="85" data-pureexperienceses-duration="2" class="pureexperienceses"></span>
+                    <p><strong>Customer service</strong> We act as an independent party to the transaction, holding assets in escrow and disbursing them quickly and securely according to the terms of the agreement.</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="experiences-box">
                     <i class="bi bi-clock"></i>
-                    <span data-pureexperienceser-start="0" data-pureexperienceser-end="35" data-pureexperienceser-duration="4" class="pureexperienceser"></span>
-                    <p><strong>Years of experiences</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                    <span data-pureexperienceses-start="0" data-pureexperienceses-end="35" data-pureexperienceses-duration="4" class="pureexperienceses"></span>
+                    <p><strong>Years of experiences</strong> Years of service have worked for us to keep our customers satisfied.</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="experiences-box">
                     <i class="bi bi-award"></i>
-                    <span data-pureexperienceser-start="0" data-pureexperienceser-end="20" data-pureexperienceser-duration="4" class="pureexperienceser"></span>
-                    <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                    <span data-pureexperienceses-start="0" data-pureexperienceses-end="20" data-pureexperienceses-duration="4" class="pureexperienceses"></span>
+                    <p><strong>Awards</strong> We reward our clients by delivering excellent quality services.</p>
                   </div>
                 </div>
               </div>
             </div><!-- End .content-->
-          </div>
         </div>
-
       </div>
     </section><!-- End experiences Section -->
 
@@ -368,7 +366,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/pureexperienceser/pureexperienceser.js"></script>
+  <script src="assets/vendor/pureexperienceses/pureexperienceses.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Template Main JS File -->
