--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/Katarsis.png" rel="icon">
-  <link href="assets/img/Katarsis.png" rel="apple-touch-icon">
+  <link href="assets/img/ATLANTIC.bmp" rel="icon">
+  <link href="assets/img/ATLANTIC.bmp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -36,9 +36,9 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">AE<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!--<a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/Katarsis.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/ATLANTIC.bmp" alt="" class="img-fluid"></a>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">ATLANTIC ESCROW<span></span></a></h1>
+      
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -345,7 +345,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>AE<span>.</span></h3>
+              <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/ATLANTIC.bmp" alt="" class="img-fluid"></a>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
