--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             <ul>
               <li><i class="ri-check-double-line"></i> Qualified Escrow Service
 We act as a secure intermediary for the efficient exchange of funds or securities in international corporate or commercial operations.</li>
-              <li><i class="ri-check-double-line"></i> Over 5 Years of experiences
-Our professionals are experiencesd and proactive. We are committed with the client to resolve any issue about the international negotiations.</li>
+              <li><i class="ri-check-double-line"></i> Over 5 Years of experience
+Our professionals are experienced and proactive. We are committed with the client to resolve any issue about the international negotiations.</li>
               <li><i class="ri-check-double-line"></i> Our Team
-Our experiencesd team of residential and commercial title professionals ensure a smooth closing experiences for all parties involved in the purchase transaction.</li>
+Our experienced team of residential and commercial title professionals ensure a smooth closing experiences for all parties involved in the purchase transaction.</li>
             </ul>
             <p>
             </p>
@@ -192,7 +192,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
                   <div class="experiences-box">
                     <i class="bi bi-emoji-smile"></i>
                     <span data-pureexperienceses-start="0" data-pureexperienceses-end="100" data-pureexperienceses-duration="2" class="pureexperienceses"></span>
-                    <p><strong>Risk reduction strategy</strong> Risk reduction is top of mind in any global transaction. That’s why so many companies turn to Irish Holdings for Escrow Services. Our global team of experts will help you develop an escrow transaction structure that will work for you.</p>
+                    <p><strong>Risk reduction strategy</strong> Risk reduction is top of mind in any global transaction. That’s why so many companies turn to Atlantic Escrow for Escrow Services. Our global team of experts will help you develop an escrow transaction structure that will work for you.</p>
                   </div>
                 </div>
 
@@ -257,7 +257,7 @@ Our experiencesd team of residential and commercial title professionals ensure a
                 <h4></h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I had never used a title company before ans I am glad I did, very professional staff.
+                  I had never used a title company before and I am glad I did, very professional staff.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
