--- a/index.html
+++ b/index.html
@@ -315,19 +315,19 @@ Our experienced team of residential and commercial title professionals ensure a 
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Adam Street, New York, NY 535022</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>contact@TLnticscrow.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 55</p>
               </div>
             </div>
           </div>
@@ -347,10 +347,10 @@ Our experienced team of residential and commercial title professionals ensure a 
             <div class="footer-info">
               <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/ATLANTIC.bmp" alt="" class="img-fluid"></a>
               <p>
-                A108 Adam Street <br>
+                Adam Street <br>
                 NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Phone:</strong> +1 55<br>
+                <strong>Email:</strong> contact@atlanticscrow.com<br>
               </p>
         Designed by <a href="https://google.com/">KATARSYS</a>
       </div>
