--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Our experienced team of residential and commercial title professionals ensure a 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>contact@TLnticscrow.com</p>
+                <p>contact@atlanticscrow.com</p>
               </div>
 
               <div class="phone">
