--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/ATLANTIC.bmp" rel="icon">
-  <link href="assets/img/ATLANTIC.bmp" rel="apple-touch-icon">
+  <link href="assets/img/ATLANTIC.png" rel="icon">
+  <link href="assets/img/ATLANTIC.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/ATLANTIC.bmp" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/ATLANTIC.png" alt="" class="img-fluid"></a>
       <h1 class="logo me-auto me-lg-0"><a href="index.html">ATLANTIC ESCROW<span></span></a></h1>
       
 
@@ -345,14 +345,14 @@ Our experienced team of residential and commercial title professionals ensure a 
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/ATLANTIC.bmp" alt="" class="img-fluid"></a>
+              <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/ATLANTIC.png" alt="" class="img-fluid"></a>
               <p>
                 Adam Street <br>
                 NY 535022, USA<br><br>
                 <strong>Phone:</strong> +1 55<br>
                 <strong>Email:</strong> contact@atlanticscrow.com<br>
               </p>
-        Designed by <a href="https://google.com/">KATARSYS</a>
+        Designed by ATLANTIC ESCROW</a>
       </div>
     </div>
   </footer><!-- End Footer -->
