--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Our experienced team of residential and commercial title professionals ensure a 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>holdings@atlanticscrow.com</p>
+                <p>holdings@atlantic-escrow.com</p>
               </div>
 
               <div class="phone">
@@ -350,7 +350,7 @@ Our experienced team of residential and commercial title professionals ensure a 
                 411 Fayetteville <br>
                 Raleigh NC 27601, USA<br><br>
                 <strong>Phone:</strong> +1 9192415004<br>
-                <strong>Email:</strong> holdings@atlanticscrow.com<br>
+                <strong>Email:</strong> holdings@atlantic-escrow.com<br>
               </p>
         Designed by ATLANTIC ESCROW</a>
       </div>
